--- a/task2/processador-de-consultas/processador.ipynb
+++ b/task2/processador-de-consultas/processador.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        " 'ESPERADOS': ['esperados.csv']}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,17 +97,17 @@
     "for query in query_elements:\n",
     "    query_number = query.getElementsByTagName('QueryNumber')[0].firstChild.nodeValue\n",
     "    query_text = query.getElementsByTagName('QueryText')[0].firstChild.nodeValue.strip()\n",
-    "    query_text = unidecode(query_text.replace(';', '').replace('\\n', '')).lower()\n",
+    "    query_text = unidecode(query_text.replace(';', ' ')).lower()\n",
     "    xml_data_queries.append([query_number, query_text])\n",
     "\n",
     "df_queries = pd.DataFrame(xml_data_queries, columns=['QueryNumber', 'QueryText'])\n",
     "\n",
-    "df_queries.to_csv(results_path + config_dict['CONSULTAS'][0], index=False)"
+    "df_queries.to_csv(results_path + config_dict['CONSULTAS'][0], index=False, sep=';')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "4       00005                              is cf mucus abnormal?"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,27 +192,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Extrai as informações do XML\n",
     "xml_data_docs = []\n",
     "for query in parsed_xml.getElementsByTagName('QUERY'):\n",
-    "    query_number = query.getElementsByTagName('QueryNumber')[0].childNodes[0].data\n",
+    "    query_number = query.getElementsByTagName('QueryNumber')[0].firstChild.nodeValue\n",
     "    for record in query.getElementsByTagName('Records')[0].getElementsByTagName('Item'):\n",
-    "        doc_number = record.childNodes[0].data\n",
+    "        doc_number = record.firstChild.nodeValue\n",
     "        doc_votes = record.getAttribute('score')\n",
     "        xml_data_docs.append((query_number, doc_number, doc_votes))\n",
     "\n",
     "# Cria um DataFrame com as informações extraídas do XML\n",
     "df_docs = pd.DataFrame(xml_data_docs, columns=['QueryNumber', 'DocNumber', 'DocVotes'])\n",
-    "df_docs.to_csv(results_path + config_dict['ESPERADOS'][0], index=False)"
+    "df_docs.to_csv(results_path + config_dict['ESPERADOS'][0], index=False, sep=';')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "4       00001       370     1010"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
