--- a/task2/indexador/indexador.ipynb
+++ b/task2/indexador/indexador.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "{'LEIA': ['lista.csv'], 'ESCREVA': ['modelo.json']}"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "4    aeruginosa  ['00001', '00001', '00001', '00006', '00006', ..."
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,11 +216,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tf_matrix = tf_idf_default(word_doc_dict, freq_dict, docs_max_freq)"
+    "tf_matrix = tf_idf_default(word_doc_dict, freq_dict, docs_max_freq)\n",
+    "tf_matrix_df = pd.DataFrame(tf_matrix)"
    ]
   },
   {
@@ -229,8 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(results_path + config_dict['ESCREVA'][0], \"w\") as outfile:\n",
-    "    json.dump(tf_matrix, outfile)"
+    "tf_matrix_df.to_csv(results_path + config_dict['ESCREVA'][0], sep=';')"
    ]
   }
  ],
