--- a/task2/indexador/indexador.ipynb
+++ b/task2/indexador/indexador.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,16 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'LEIA': ['lista.csv'], 'ESCREVA': ['modelo.json']}"
+       "{'LEIA': ['lista.csv'], 'ESCREVA': ['modelo.csv.gz']}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,11 +226,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tf_matrix_df.to_csv(results_path + config_dict['ESCREVA'][0], sep=';')"
+    "tf_matrix_df.to_csv(results_path + config_dict['ESCREVA'][0], sep=';', compression=\"gzip\")"
    ]
   }
  ],
