--- a/task2/src/buscador.ipynb
+++ b/task2/src/buscador.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "4       00005                              is cf mucus abnormal?"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "1215"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00001</td>\n",
+       "      <td>[1, 00568, 0.2567705545226937]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00001</td>\n",
+       "      <td>[2, 00392, 0.30154363532400863]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00001</td>\n",
+       "      <td>[3, 00767, 0.34648276399395195]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00001</td>\n",
+       "      <td>[4, 00552, 0.3473665695005088]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00001</td>\n",
+       "      <td>[5, 00043, 0.36078081267395345]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1210</th>\n",
+       "      <td>00100</td>\n",
+       "      <td>[1211, 00229, 0.7028979001133253]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1211</th>\n",
+       "      <td>00100</td>\n",
+       "      <td>[1212, 00561, 0.704207401001172]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1212</th>\n",
+       "      <td>00100</td>\n",
+       "      <td>[1213, 01007, 0.7072940040889628]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1213</th>\n",
+       "      <td>00100</td>\n",
+       "      <td>[1214, 00940, 0.7196677320148781]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1214</th>\n",
+       "      <td>00100</td>\n",
+       "      <td>[1215, 01018, 1.0]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>120285 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0                                  1\n",
+       "0     00001     [1, 00568, 0.2567705545226937]\n",
+       "1     00001    [2, 00392, 0.30154363532400863]\n",
+       "2     00001    [3, 00767, 0.34648276399395195]\n",
+       "3     00001     [4, 00552, 0.3473665695005088]\n",
+       "4     00001    [5, 00043, 0.36078081267395345]\n",
+       "...     ...                                ...\n",
+       "1210  00100  [1211, 00229, 0.7028979001133253]\n",
+       "1211  00100   [1212, 00561, 0.704207401001172]\n",
+       "1212  00100  [1213, 01007, 0.7072940040889628]\n",
+       "1213  00100  [1214, 00940, 0.7196677320148781]\n",
+       "1214  00100                 [1215, 01018, 1.0]\n",
+       "\n",
+       "[120285 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
