--- a/task2/src/processador.ipynb
+++ b/task2/src/processador.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "4       00005                              is cf mucus abnormal?"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,27 +192,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extrai as informações do XML\n",
+    "def soma_string(score):\n",
+    "  digit_sum = 0\n",
+    "  for digit in score:\n",
+    "    digit_sum += int(digit)\n",
+    "  \n",
+    "  return digit_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "xml_data_docs = []\n",
     "for query in parsed_xml.getElementsByTagName('QUERY'):\n",
     "    query_number = query.getElementsByTagName('QueryNumber')[0].firstChild.nodeValue\n",
     "    for record in query.getElementsByTagName('Records')[0].getElementsByTagName('Item'):\n",
     "        doc_number = record.firstChild.nodeValue\n",
-    "        doc_votes = record.getAttribute('score')\n",
+    "        doc_votes = soma_string(record.getAttribute('score'))\n",
+    "        \n",
     "        xml_data_docs.append((query_number, doc_number, doc_votes))\n",
     "\n",
-    "# Cria um DataFrame com as informações extraídas do XML\n",
+    "\n",
     "df_docs = pd.DataFrame(xml_data_docs, columns=['QueryNumber', 'DocNumber', 'DocVotes'])\n",
     "df_docs.to_csv(results_path + config_dict['ESPERADOS'][0], index=False, sep=';')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -246,46 +261,46 @@
        "      <th>0</th>\n",
        "      <td>00001</td>\n",
        "      <td>139</td>\n",
-       "      <td>1222</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>00001</td>\n",
        "      <td>151</td>\n",
-       "      <td>2211</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>00001</td>\n",
        "      <td>166</td>\n",
-       "      <td>0001</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>00001</td>\n",
        "      <td>311</td>\n",
-       "      <td>0001</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>00001</td>\n",
        "      <td>370</td>\n",
-       "      <td>1010</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  QueryNumber DocNumber DocVotes\n",
-       "0       00001       139     1222\n",
-       "1       00001       151     2211\n",
-       "2       00001       166     0001\n",
-       "3       00001       311     0001\n",
-       "4       00001       370     1010"
+       "  QueryNumber DocNumber  DocVotes\n",
+       "0       00001       139         7\n",
+       "1       00001       151         6\n",
+       "2       00001       166         1\n",
+       "3       00001       311         1\n",
+       "4       00001       370         2"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
