implement gerador and processador as classes: update with stemmer option

--- a/task2/src/avalia.ipynb
+++ b/task2/src/avalia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "1219            2  [5, '00986', 0.43861929397921473]   986"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +581,7 @@
        "3.3528116495541944"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,15 +624,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4036582855309668"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def norm_discounted_cumulative_gain(result, esperados):\n",
-    "  discounted_cumulative_gains = []\n",
-    "  queries_set = set(result['QueryNumber'].to_list())\n",
+    "discounted_cumulative_gains = []\n",
+    "queries_set = set(result['QueryNumber'].to_list())\n",
     "  \n",
-    "  for query in queries_set:\n",
+    "for query in queries_set:\n",
     "    dcg = 0\n",
     "    dcg_max = 0\n",
     "    relevant_documents = esperados.loc[esperados['QueryNumber'] == query, 'DocNumber'].to_list()\n",
@@ -644,27 +654,25 @@
     "      if ret in relevant_documents:\n",
     "        rel_pos = relevant_documents.index(ret)\n",
     "        score = scores[rel_pos]\n",
-    "        scores_ret.append(scores_ret)\n",
+    "        scores_ret.append(score)\n",
     "        if k == 0:\n",
     "          dcg += score\n",
     "        else:\n",
     "          dcg += score/np.log2(k+1)  \n",
-    "    scores_ret_ord = np.sort(scores_ret)\n",
-    "    \n",
+    "    scores_ret_ord = np.sort(scores_ret)[::-1]\n",
     "    for i, score in enumerate(scores_ret_ord):\n",
     "        if i == 0:\n",
     "          dcg_max += score\n",
     "        else:\n",
     "          dcg_max += score/np.log2(i+1)  \n",
-    "    \n",
-    "    discounted_cumulative_gains.append(dcg/dcg_max)\n",
-    "  mean_dcg = np.mean(discounted_cumulative_gains)\n",
+    "    if dcg_max > 0:\n",
+    "      discounted_cumulative_gains.append(dcg/dcg_max)\n",
+    "    else: \n",
+    "      discounted_cumulative_gains.append(0)\n",
+    " \n",
     "\n",
-    "  return mean_dcg\n",
-    "\n",
-    "norm_dcg = norm_discounted_cumulative_gain(result, esperados)\n",
-    "\n",
-    "norm_dcg"
+    "mean_dcg = np.mean(discounted_cumulative_gains)\n",
+    "mean_dcg"
    ]
   }
  ],
